# markov-solver

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug-report.yml  config.yml  feature-request.yaml  feature-request.yml  security-vulnerability.yml
.github/workflows/: build.yaml  changelog-enforcer.yaml  changelog_enforcer.yaml  ci.yaml  codeql-analysis.yaml  codeql.yaml  docs.yaml  labeler.yaml  pr-validation.yaml  release.yaml  sync-labels.yaml  test.yaml
docs/: Makefile  commands.rst  conf.py  definitions.rst  index.rst  installation.rst
docs/_templates/: layout.html
examples/: requirements.txt  simple.definition.csv  simple.definition.dot  simple.definition.json  simple.matrix.json  simple.matrix.yaml  simple.py
resources/brand/: demo.yaml
resources/definitions/: simple.yaml
src/markov-solver/: cli.py
src/markov-solver/utils/: guiutils.py  logutils.py
src/markov_solver/: cli.py  constants.py
src/markov_solver/config/: metadata.py  versioning.py
src/markov_solver/core/examples/: markov_chains.py
src/markov_solver/core/parser/: base.py  (+6 more)
src/markov_solver/model/: markov_chain.py  markov_link.py  markov_state.py
src/markov_solver/parser/: base.py  chain_format_parser.py  csv_parser.py  dot_parser.py  markov_chain_parser.py  transition_matrix_parser.py
src/markov_solver/utils/: csv_utils.py  file_utils.py  guiutils.py  logutils.py  report.py
tests/: conftest.py
tests/markov_solver/: test_chain_format_parser.py  test_cli.py  test_constants.py  test_csv_parser.py  test_csv_utils.py  test_dot_parser.py  test_guiutils.py  test_markov_chain.py  test_markov_chain_parser.py  test_markov_link.py  test_markov_state.py  test_report.py  test_transition_matrix_parser.py
tests/markov_solver/model/: test_markov_chain.py  test_markov_link.py  test_markov_state.py
tests/markov_solver/parser/: test_chain_format_parser.py  test_csv_parser.py  test_dot_parser.py  test_markov_chain_parser.py  test_transition_matrix_parser.py
tests/markov_solver/results/: test_report.py
tests/markov_solver/utils/: test_file_utils.py  test_logutils.py
(+6 files in other folders)
